Allow to run multiple runtimes benchmarks

--- a/examples/Benchmark/Benchmark.csproj
+++ b/examples/Benchmark/Benchmark.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net48;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <SonarQubeExclude>true</SonarQubeExclude>
+    <<LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
