--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-    "omnisharp.organizeImportsOnFormat": true,
     "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": false,
     "coverage-gutters.coverageFileNames":[
         "coverage.info"
     ],
     "coverage-gutters.showGutterCoverage": false,
-    "coverage-gutters.showLineCoverage": true
+    "coverage-gutters.showLineCoverage": true,
+    "dotnet.formatting.organizeImportsOnFormat": true
 }
