Support percentage size for image #188

--- a/examples/Demo/Demo.csproj
+++ b/examples/Demo/Demo.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\*" />
+    <Content Include="images\*" CopyToOutputDirectory="PreserveNewest"/>
   </ItemGroup>
 
 </Project>
