--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,25 +12,28 @@ on:
   pull_request:
 
 jobs:
-  net8:
+  net5_above:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: [ '8.0.x', '10.0.x' ]
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup .NET 8.
-        uses: actions/setup-dotnet@v4
+      - uses: actions/checkout@v5
+      - name: Setup .NET ${{ matrix.dotnet-version }}.
+        uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: ${{ matrix.dotnet-version }}
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Run tests
-        run: dotnet test --framework net8.0 --configuration Release --no-build --verbosity normal
+        run: dotnet test --framework ${{ matrix.dotnet-version }} --configuration Release --no-build --verbosity normal
 
   net462:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Setup .NET Framework
         uses: microsoft/setup-msbuild@v2
       - name: Build
