--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,19 +16,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: [ '8.0.x', '10.0.x' ]
+        dotnet-version: [ '8.0', '10.0' ]
     steps:
       - uses: actions/checkout@v5
       - name: Setup .NET ${{ matrix.dotnet-version }}.
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: ${{ matrix.dotnet-version }}
+          dotnet-version: ${{ matrix.dotnet-version }}.x
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Run tests
-        run: dotnet test --framework ${{ matrix.dotnet-version }} --configuration Release --no-build --verbosity normal
+        run: dotnet test --framework net${{ matrix.dotnet-version }} --configuration Release --no-build --verbosity normal
 
   net462:
     runs-on: windows-latest
