--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   net5_above:
     runs-on: ubuntu-latest
+    defaults: 
+      run:
+        working-directory: ${{ github.workspace }}
     strategy:
       matrix:
         dotnet-version: [ '8.0', '10.0' ]
@@ -23,6 +26,12 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ matrix.dotnet-version }}.x
+      - uses: actions/cache@v4
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj', '**/*.sln') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
