Prepare for next release

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,6 +4,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Version>3.3.1</Version>
     </PropertyGroup>
 
     <PropertyGroup>
